# gravity

./: Cargo.toml  README.md  gif.sh  index.html  rust-toolchain  stream.sh
.github/workflows/: publish.yml
assets/: manifest.json  sw.js
src/: app.rs  gravity.rs  lib.rs  main.rs  video.rs
ui/: .gitignore  app.ts  index.html  package-lock.json  package.json
