[package]
name = "gravity"
version = "0.1.0"
authors = ["Samuel Carlsson <samuel.carlsson@gmail.com>"]
description = "Gravity simulator in rust"
license = "MIT/Apache-2.0"
repository = "https://github.com/vidstige/gravity"
edition = "2018"

[dependencies]
#probability = "0.18.0"
wasm-bindgen = "0.2"

[lib]
crate-type = ["cdylib"]
