[package]
name = "gravity"
version = "0.1.0"
edition = "2021"
rust-version = "1.72"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
# enable the js feature in getrandom
getrandom = { version = "0.2.11", features = ["js"] }
eframe = {version = "0.33.0", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "wayland",       # Enable Wayland platform support.
    "x11",           # Enable X11 platform support.
]}
rayon = "1.8"

# native:
#[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
#env_logger = "0.10"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.50"
web-sys = "0.3.70"              # to access the DOM

[profile.release]
opt-level = 2 # fast and small wasm
